2012-01-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/addressbook-overlay.js
	(SIOnLoadHandler): checkAvailability is now callback based, we
	therefore must enable the toolbar via a callback function.

2011-12-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/calendar/calendars-list-overlay.js
	(SICalendarListTreeController.isCommandEnabled): directoryChecker
	is now callback based, when first invoked, provide a proper
	"yesCallback" and reinvoke the command check to properly enable
	our custom menus.

	* chrome/content/messenger/folders-update.js:
	(directoryChecker.checkAvailability) invoke "yesCallback" only
	when set.

2011-11-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/calendar/folder-handler.js
	(CalendarHandler.addDirectories): pass "true" as value to the new
	"useCache" parameter to calCalendarManager.registerCalendar.

2011-11-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/messenger/folders-update.js
	(directoryChecker.checkAvailability): made asynchronous to avoid
	blocking the network thread.

2011-03-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/calendar/calendar-overlay.js
	(openCalendarUnsubscriptionDialog): Fixed typo in function named
	and included confirmation code from calendar-common-sets.js for
	unsubscriptions.

	* chrome/content/calendar/calendar-common-sets.{js,xul}: removed
	obsolete files.

	* chrome/content/general/creation-utils.js
	(createOperation.onMkColQueryComplete): the display name must be
	passed through xmlEscape().

2010-11-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/folder-handler.js:
	(AddressbookHandler._moveAddressBook): add cloned versions of the
	cards to avoid raising their reference count, which otherwise
	prevents their proper deletion.

2010-11-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/folder-handler.js: